css fixes, sidebar no longer overlaps

--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -10,6 +10,7 @@
  
  #reportContent{
 	 margin-left : 15%;
+	 padding-left : 5%;
  }
 
 /* Toggle Styles */
@@ -36,7 +37,7 @@
 }
 
 #wrapper.toggled #sidebar-wrapper {
-    width: 15%;
+    width: 30%;
 }
 
 #page-content-wrapper {
